[project]
name = "rl-tracker"
version = "0.1.0"
description = "Barebones Rocket League session tracker (W/L) using the local Stats API"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pyinstaller>=6"]

[project.scripts]
rl-tracker = "rl_tracker.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rl_tracker*"]
